# MarineXchangeAfricaBackend

./: .gitignore  MarineXchange_API_Report.md  pyproject.toml  run.py  test_kyc_flow.py  test_payments.py  test_phase11.py
.claude/: settings.local.json
app/: config.py  deps.py  main.py
app/core/: audit.py  file_validation.py  permissions.py
app/middleware/: request_context.py
app/routers/: __init__.py
app/routers/auth/: me.py  (+4 more)
app/schemas/: auth.py  deals.py  exchange_rates.py  kyc.py  marketplace.py  notifications.py  purchase_requests.py  reports.py
app/services/: auth_service.py  deal_service.py  document_service.py  exchange_rate_service.py  kyc_service.py  marketplace_service.py  notification_service.py  notifications_service.py  payment_service.py  profile_service.py  purchase_request_service.py  twilio_service.py  watermark_service.py
backend/: .env.example  .gitignore  bootstrap_admin.py  check_users.py  create_test_users.py  requirements.txt  reset_buyer.py  test_all.py  test_auctions.py  test_deals_flow.py  test_documents.py  test_endpoints.py  test_phase12.py  test_purchase_requests.py  test_reports.py
backend/app/: config.py  deps.py  main.py
backend/sql/: 001_initial_schema.sql  003_deals_payments.sql  004_purchase_requests.sql  005_auctions.sql  007_documents.sql  008_phase11.sql  009_product_documents.sql  010_full_history_access.sql  011_product_decision_reasons.sql  013_kyc_enhanced.sql  (+4 more)
sql/: 002_kyc_schema.sql  002_marketplace_phase3.sql  006_payment_lifecycle.sql  012_product_snapshots.sql  014_phone_otps.sql
tests/: test_auth.py
(+122 files in other folders)
